tests/Parse/test_1_r07.spl
int test_1_r07()
{
  int a, b, c;
  a = 1;
  b = a && 2;
  c = b || 3;
  a = c | 4;
  b = a & 5;
}
